@@ -1,5 +1,8 @@
 Changes since RTEMS-NFS 1.3:
 RPCIOD:
+ - round timeout to next system clock tick and ensure it is at least
+   1 tick.
+ - cap retransmission timeout to transaction lifetime.
  - BUGFIX (reported by Steven Johnson, 12/5/06): we must change the XID
    before sending a timed-out transaction back to the requestor to prevent
    a late reply from being accepted.
@@ -7,6 +10,8 @@ RPCIOD:
    by default).
 
 NFS:
+ - added nfsGetTimeout() and nfsSetTimeout() to retrieve and modify,
+   respectively the (global) timeout for NFS/MOUNT operations.
  - Minor mod. to fix 'type-punned pointer' warning (can avoid pointer cast).
  - Added global variable 'nfsStBlksize' (defaults to 8k) which is now
    used to report the file system's 'preferred' blocksize (stat(2)/st_blksize).
